--- a/src/main/resources/CSS/qlmenu.css
+++ b/src/main/resources/CSS/qlmenu.css
@@ -75,6 +75,7 @@
     -fx-padding: 10;
     -fx-background-color: #EFEFEF;
     -fx-alignment: center;
+    -fx-background-radius: 20;
 }
 
 .menu-item {
