--- a/src/main/resources/CSS/qlban.css
+++ b/src/main/resources/CSS/qlban.css
@@ -73,6 +73,7 @@
     -fx-padding: 20;
     -fx-background-color: #EFEFEF;
     -fx-alignment: center;
+    -fx-background-radius: 20;
     -fx-hgap: 10;
     -fx-vgap: 30;
 }
