--- a/src/main/resources/FXML/ChonMon.fxml
+++ b/src/main/resources/FXML/ChonMon.fxml
@@ -2,60 +2,66 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800.0"
-            prefWidth="1400.0"
-            style="-fx-background-color: D9D9D9;"
-            stylesheets="@../CSS/chonmon.css"
-            fx:controller="ui.controllers.ChonMonController"
-            xmlns="http://javafx.com/javafx/24.0.1"
-            xmlns:fx="http://javafx.com/fxml/1">
-
-    <!-- Sidebar trái -->
-    <left>
-        <fx:include source="sidebar_NV.fxml" />
-    </left>
+<BorderPane prefHeight="800.0" prefWidth="1400.0" style="-fx-background-color: D9D9D9;" stylesheets="@../CSS/chonmon.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.ChonMonController">
 
     <!-- Nội dung chính -->
     <center>
-        <VBox spacing="20" styleClass="main-content" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS">
-            <VBox.vgrow>ALWAYS</VBox.vgrow>
+        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20" styleClass="main-content" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
-         <VBox prefHeight="780.0" prefWidth="660.0" styleClass="center-p">
-            <children>
-                  <HBox alignment="CENTER" prefHeight="56.0" prefWidth="660.0" spacing="10" style="-fx-background-color: white; -fx-background-radius: 20 20 28 28;">
-                  <Button mnemonicParsing="false" prefHeight="67.0" prefWidth="73.0" styleClass="btn-back" text="Chọn Bàn" />
-                      <TextField layoutX="14.0" layoutY="7.0" prefHeight="63.0" prefWidth="577.0" promptText="Tìm món ăn..." styleClass="search-field" HBox.hgrow="ALWAYS" />
-                  </HBox>
-                  <!-- Scroll menu -->
-                <ScrollPane fitToWidth="true" prefHeight="880.0" prefWidth="1040.0" styleClass="menu-scroll">
-                    <content>
-                        <FlowPane fx:id="flowMonAn" hgap="50" prefHeight="881.0" prefWidth="1026.0" styleClass="menu-grid" vgap="30">
-                        </FlowPane>
-                    </content>
-                </ScrollPane>
-            </children>
-         </VBox>
+
+            <!-- Nền trắng bo tròn -->
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #efefef; -fx-background-radius: 20 20 28 28;" VBox.vgrow="ALWAYS">
+                <children>
+
+                    <!-- Thanh tìm kiếm -->
+                    <HBox alignment="CENTER_LEFT" prefHeight="80" spacing="12" styleClass="menu-search-container" HBox.hgrow="ALWAYS">
+
+                        <!-- Nút quay lại chọn bàn -->
+                        <Button fx:id="back" prefHeight="80.0" prefWidth="80.0" styleClass="btn-back" text="Chọn Bàn" />
+
+                        <!-- Ô tìm kiếm -->
+                        <HBox alignment="CENTER_LEFT" spacing="8" styleClass="menu-search-box" HBox.hgrow="ALWAYS">
+                            <Label styleClass="search-icon" text="🔍" />
+                            <TextField promptText="Tìm món ăn..." styleClass="search-field" HBox.hgrow="ALWAYS" />
+                        </HBox>
+
+                        <!-- ComboBox chọn loại món -->
+                        <ComboBox fx:id="comboDanhMuc" prefWidth="180" promptText="Chọn Loại Món" styleClass="combo-box" />
+                    </HBox>
+
+                    <!-- Lưới món ăn -->
+                    <ScrollPane fitToHeight="true" fitToWidth="true" styleClass="menu-scroll" VBox.vgrow="ALWAYS">
+                        <content>
+                            <FlowPane fx:id="flowMonAn" alignment="CENTER" hgap="40" prefWrapLength="1200" styleClass="menu-grid" vgap="30" />
+                        </content>
+                    </ScrollPane>
+
+                </children>
+            </VBox>
         </VBox>
     </center>
 
+
     <!-- Sidebar phải -->
     <right>
-        <VBox spacing="20" styleClass="right-sidebar" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS">
+        <VBox spacing="10.0" styleClass="right-sidebar" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS">
             <VBox.vgrow>ALWAYS</VBox.vgrow>
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
@@ -63,7 +69,7 @@
 
             <Label alignment="CENTER" prefHeight="54.0" prefWidth="351.0" styleClass="section-title" text="Thông Tin Đặt Bàn" textAlignment="CENTER" />
 
-            <VBox prefHeight="196.0" prefWidth="340.0" spacing="12" styleClass="customer-info">
+            <VBox maxHeight="150.0" prefHeight="150.0" spacing="12" styleClass="customer-info">
                 <HBox alignment="CENTER_LEFT" spacing="10">
                     <Label styleClass="info-label" text="Họ và tên:" />
                     <TextField prefHeight="24.0" prefWidth="228.0" promptText="Nhập họ tên" styleClass="filter-tf" />
@@ -87,17 +93,7 @@
                     <TextField prefHeight="24.0" prefWidth="228.0" promptText="Ghi chú đặc biệt" styleClass="filter-tf" />
                 </HBox>
             </VBox>
-
-            <HBox alignment="CENTER_LEFT" spacing="15">
-                <Label styleClass="bold-label" text="Thanh Toán:" />
-                <RadioButton selected="true" text="Chuyển Khoản">
-                    <toggleGroup>
-                        <ToggleGroup fx:id="paymentGroup" />
-                    </toggleGroup></RadioButton>
-                <RadioButton text="Tiền Mặt" toggleGroup="$paymentGroup" />
-            </HBox>
-              <VBox prefHeight="426.0" prefWidth="338.0" spacing="12" styleClass="order-details">
-                  <Label prefHeight="34.0" prefWidth="336.0" styleClass="order-title" text="CHI TIẾT ĐƠN HÀNG" />
+              <VBox prefHeight="542.0" prefWidth="340.0" spacing="8.0" styleClass="order-details">
 
                         <!-- Hàng tiêu đề cột -->
                   <HBox styleClass="order-header">
@@ -109,68 +105,73 @@
                       <Region HBox.hgrow="ALWAYS" />
                       <Label prefHeight="15.0" prefWidth="78.0" styleClass="order-col total" text="Tổng tiền" />
                   </HBox>
-            <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="147.0" prefWidth="320.0" styleClass="scrollp_od">
-               <content>
-      
-                              <!-- Dòng dữ liệu đơn hàng -->
-                        <VBox fx:id="orderItems">
-                            <HBox styleClass="order-item">
-                                <Label text="Cơm chay" />
-                                <Region HBox.hgrow="ALWAYS" />
-                                <Label text="10" />
-                                <Region HBox.hgrow="ALWAYS" />
-                                <Label text="36000" />
-                                <Region HBox.hgrow="ALWAYS" />
-                                <Label text="360000" />
-                            </HBox>
-                            <HBox styleClass="order-item">
-                                <Label text="Cơm chay" />
-                                <Region HBox.hgrow="ALWAYS" />
-                                <Label text="10" />
-                                <Region HBox.hgrow="ALWAYS" />
-                                <Label text="36000" />
-                                <Region HBox.hgrow="ALWAYS" />
-                                <Label text="360000" />
-                            </HBox>
-                            <HBox styleClass="order-item">
-                                <Label text="Cơm chay" />
-                                <Region HBox.hgrow="ALWAYS" />
-                                <Label text="10" />
-                                <Region HBox.hgrow="ALWAYS" />
-                                <Label text="36000" />
-                                <Region HBox.hgrow="ALWAYS" />
-                                <Label text="360000" />
-                            </HBox>
-                            <HBox styleClass="order-item">
-                                <Label text="Cơm chay" />
-                                <Region HBox.hgrow="ALWAYS" />
-                                <Label text="10" />
-                                <Region HBox.hgrow="ALWAYS" />
-                                <Label text="36000" />
-                                <Region HBox.hgrow="ALWAYS" />
-                                <Label text="360000" />
-                            </HBox>
-                        </VBox>
-               </content>
-            </ScrollPane>
 
-                        <VBox spacing="8" styleClass="total-section">
+                <ScrollPane fx:id="scrollChiTiet" fitToHeight="true" fitToWidth="true" prefHeight="150.0" prefWidth="320.0" styleClass="scrollp_od">
+                    <content>
+                        <VBox fx:id="vboxChiTietDonHang" spacing="6" />
+                    </content>
+                </ScrollPane>
+
+                        <VBox spacing="2.0" styleClass="total-section">
                       <HBox spacing="10">
                           <Label styleClass="total-label" text="Tổng Tiền:" />
                           <Region HBox.hgrow="ALWAYS" />
-                          <Label styleClass="total-amount" text="12.100.000 đ" />
+                          <Label fx:id="lbl_total" styleClass="total-amount" text="0đ" />
                       </HBox>
+                       <HBox layoutX="10.0" layoutY="16.0" spacing="10">
+                          <children>
+                             <Label styleClass="total-label" text="Thuế" />
+                             <Region HBox.hgrow="ALWAYS" />
+                             <Label fx:id="lbl_thue" text="0đ" />
+                          </children>
+                       </HBox>
+                       <HBox spacing="10">
+                            <Label styleClass="total-label" text="Tổng Tiền Phải Trả:" />
+                            <Region HBox.hgrow="ALWAYS" />
+                            <Label fx:id="lbl_total_PT" styleClass="total-amount" text="0đ" />
+                       </HBox>
                       <HBox spacing="10">
                           <Label styleClass="deposit-label" text="Cọc:" />
                           <Region HBox.hgrow="ALWAYS" />
-                          <Label styleClass="deposit-amount" text="2.000.000 đ" />
+                          <Label styleClass="deposit-amount" text="0đ" />
                       </HBox>
                       <HBox spacing="10">
                           <Label styleClass="final-label" text="Còn lại:" />
                           <Region HBox.hgrow="ALWAYS" />
-                          <Label styleClass="final-amount" text="10.100.000 đ" />
+                          <Label styleClass="final-amount" text="0đ" />
                       </HBox>
                   </VBox>
+
+                  <HBox alignment="CENTER_LEFT" spacing="15">
+                   <Label prefHeight="15.0" prefWidth="79.0" style="-fx-font-weight: bold;" styleClass="bold-label" text="Thanh Toán:" />
+                   <RadioButton fx:id="rdoChuyenKhoan" prefHeight="30.0" prefWidth="136.0" selected="true" text="Chuyển Khoản">
+                       <toggleGroup>
+                           <ToggleGroup fx:id="paymentGroup" />
+                       </toggleGroup>
+                   </RadioButton>
+                      <RadioButton fx:id="rdoTienMat" text="Tiền Mặt" toggleGroup="$paymentGroup" />
+                   </HBox>
+                <VBox fx:id="vboxTienMat" managed="false" spacing="5.0" visible="false">
+                   <children>
+                       <Label style="-fx-font-weight: bold;" text="Tiền Khách Đưa:" />
+                       <TextField fx:id="txtTienKhachDua" promptText="Nhập số tiền khách đưa" styleClass="filter-tf" />
+                       <GridPane alignment="CENTER" hgap="5.0" vgap="5.0">
+                           <children>
+                               <Button fx:id="btnGoiY1" styleClass="quick-btn" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                               <Button fx:id="btnGoiY2" styleClass="quick-btn" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                               <Button fx:id="btnGoiY3" styleClass="quick-btn" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+
+                               <Button fx:id="btnGoiY4" styleClass="quick-btn" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                               <Button fx:id="btnGoiY5" styleClass="quick-btn" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                               <Button fx:id="btnGoiY6" styleClass="quick-btn" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                           </children>
+                       </GridPane>
+                       <GridPane hgap="10">
+                           <Label prefHeight="17.0" prefWidth="135.0" style="-fx-font-weight: bold; -fx-font-size: 13" text="Tiền Thừa:" />
+                           <Label fx:id="lblTienThua" prefHeight="15.0" prefWidth="106.0" styleClass="green-bold-label" text="0 đ" GridPane.columnIndex="4" />
+                       </GridPane>
+                   </children>
+                </VBox>
 
                         <!-- Nút hành động -->
                   <VBox spacing="10" styleClass="action-buttons">
