--- a/src/main/resources/FXML/QLBan.fxml
+++ b/src/main/resources/FXML/QLBan.fxml
@@ -10,60 +10,44 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800" prefWidth="1400.0" style="-fx-background-color: D9D9D9;" stylesheets="@../CSS/qlban.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.QLBanController">
+<BorderPane prefHeight="800" prefWidth="1400.0" style="-fx-background-color: #D9D9D9;" stylesheets="@../CSS/qlban.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.QLBanController">
 
-
-    <!-- Main content -->
+    <!-- Nội dung chính -->
     <center>
-        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20" styleClass="menu-bg">
+        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20" styleClass="menu-bg" VBox.vgrow="ALWAYS">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
-            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: efefef; -fx-background-radius: 20 20 28 28;">
+
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #efefef; -fx-background-radius: 20 20 28 28;" VBox.vgrow="ALWAYS">
                 <children>
 
                     <!-- Thanh tìm kiếm -->
-                    <HBox alignment="CENTER_LEFT" prefHeight="116.0" prefWidth="1040.0" spacing="12" styleClass="menu-search-container">
+                    <HBox alignment="CENTER_LEFT" prefHeight="80" spacing="12" styleClass="menu-search-container" HBox.hgrow="ALWAYS">
 
                         <!-- Ô tìm kiếm -->
-                        <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="569.0" spacing="8" styleClass="menu-search-box">
-                            <Label prefHeight="20.0" prefWidth="60.0" styleClass="search-icon" text="🔍" />
-                            <TextField prefHeight="27.0" prefWidth="561.0" promptText="Tìm món ăn" styleClass="search-field" />
+                        <HBox alignment="CENTER_LEFT" spacing="8" styleClass="menu-search-box" HBox.hgrow="ALWAYS">
+                            <Label styleClass="search-icon" text="🔍" />
+                            <TextField promptText="Tìm bàn" styleClass="search-field" HBox.hgrow="ALWAYS" />
                         </HBox>
 
-                        <!-- ComboBox chọn danh mục -->
-                        <ComboBox fx:id="comboDanhMuc" prefWidth="140" promptText="Loại bàn">
-<!--                            <items>-->
-<!--                                <FXCollections fx:factory="observableArrayList">-->
-<!--                                    <String fx:value="Hải sản" />-->
-<!--                                    <String fx:value="Đồ uống" />-->
-<!--                                    <String fx:value="Món chính" />-->
-<!--                                    <String fx:value="Tráng miệng" />-->
-<!--                                </FXCollections>-->
-<!--                            </items>-->
-<!--                            <HBox.margin>-->
-<!--                                <Insets left="40.0" />-->
-<!--                            </HBox.margin>-->
-                        </ComboBox>
+                        <!-- ComboBox chọn loại bàn -->
+                        <ComboBox fx:id="comboDanhMuc" prefWidth="140" promptText="Loại bàn" />
                         <ComboBox fx:id="comboKhuVuc" prefWidth="140" promptText="Khu vực" />
 
-                        <!-- Phần co giãn để đẩy nút “+” ra phải -->
-                        <Region fx:id="spacer" HBox.hgrow="ALWAYS" />
-
-                        <!-- Nút thêm món -->
+                        <!-- Nút thêm bàn -->
                         <Label styleClass="menu-add-btn" text="+" />
-
                     </HBox>
 
 
-                    <!-- Lưới món ăn -->
-                    <ScrollPane fitToWidth="true" prefHeight="880.0" prefWidth="1040.0" styleClass="menu-scroll">
+                    <!-- Lưới bàn -->
+                    <ScrollPane fitToHeight="true" fitToWidth="true" styleClass="menu-scroll" VBox.vgrow="ALWAYS">
                         <content>
-                            <FlowPane fx:id="flowPaneBan" alignment="CENTER" hgap="20" prefWidth="1050.0" styleClass="menu-grid" vgap="20">
-<!--                                 ========== Bàn 1 ==========-->
+                            <FlowPane fx:id="flowPaneBan" alignment="CENTER" hgap="30" prefWrapLength="1200" styleClass="menu-grid" vgap="30">
+
+                                <!-- ========== Bàn mẫu ========== -->
                                 <VBox styleClass="menu-item">
                                     <ImageView fitHeight="140" fitWidth="200" preserveRatio="true" smooth="true" styleClass="menu-image">
                                         <image>
@@ -71,36 +55,30 @@
                                         </image>
                                     </ImageView>
 
-                                    <HBox prefHeight="60.0" prefWidth="240.0" styleClass="item-info">
-                              <children>
-                                 <VBox prefHeight="40.0" prefWidth="73.0" styleClass="item-group">
-                                    <children>
-                                       <Label prefHeight="21.0" prefWidth="64.0" styleClass="item-title" text="Khu Vực" />
-                                       <Label fx:id="lblKhuVuc" styleClass="item-detail" text="IN" />
-                                    </children>
-                                 </VBox>
-                                 <VBox layoutX="107.0" layoutY="20.0" prefHeight="40.0" prefWidth="66.0" styleClass="item-group">
-                                    <children>
-                                       <Label styleClass="item-title" text="Mã Bàn" />
-                                       <Label fx:id="lblMaBan" styleClass="item-detail" text="BI0001" />
-                                    </children>
-                                 </VBox>
-                                 <VBox layoutX="135.0" layoutY="20.0" prefHeight="40.0" prefWidth="82.0" styleClass="item-group">
-                                    <children>
-                                       <Label styleClass="item-title" text="Số Lượng" />
-                                       <Label fx:id="lblSoLuong" styleClass="item-detail" text="1-2" />
-                                    </children>
-                                 </VBox>
-                              </children>
+                                    <HBox alignment="CENTER" prefHeight="60.0" prefWidth="240.0" spacing="15" styleClass="item-info">
+                                        <children>
+                                            <VBox styleClass="item-group">
+                                                <Label styleClass="item-title" text="Khu Vực" />
+                                                <Label fx:id="lblKhuVuc" styleClass="item-detail" text="IN" />
+                                            </VBox>
+                                            <VBox styleClass="item-group">
+                                                <Label styleClass="item-title" text="Mã Bàn" />
+                                                <Label fx:id="lblMaBan" styleClass="item-detail" text="BI0001" />
+                                            </VBox>
+                                            <VBox styleClass="item-group">
+                                                <Label styleClass="item-title" text="Số Lượng" />
+                                                <Label fx:id="lblSoLuong" styleClass="item-detail" text="1-2" />
+                                            </VBox>
+                                        </children>
                                     </HBox>
                                 </VBox>
 
                             </FlowPane>
                         </content>
                     </ScrollPane>
+
                 </children>
             </VBox>
-
         </VBox>
     </center>
 </BorderPane>
