--- a/src/main/resources/CSS/datban.css
+++ b/src/main/resources/CSS/datban.css
@@ -91,8 +91,8 @@
     -fx-font-weight: bold;
     -fx-text-fill: #2c3e50;
     -fx-pref-width: 110px;
-    -fx-alignment: right;
-    -fx-text-alignment: right;
+    -fx-alignment: CENTER_RIGHT;
+    -fx-text-alignment: RIGHT;
 }
 
 .form-field {
